--- a/index.html
+++ b/index.html
@@ -22,37 +22,38 @@
                     <fieldset class="name">
                         <div>
                             <label for="first-name">FIRST NAME</label><br>
-                            <input type="text" name="first-name">
+                            <input type="text" required name="first-name">
                         </div>
                         <div>
                             <label for="last-name">LAST NAME</label><br>
-                            <input type="text" name="last-name">
+                            <input type="text" required name="last-name">
                         </div>
                     </fieldset>
                     <fieldset class="info">
                         <div>
                             <label for="email">EMAIL</label><br>
-                            <input type="email" name="first-name">
+                            <input type="email" required name="first-name">
                         </div>
                         <div>
                             <label for="phone-number">PHONE NUMBER</label><br>
-                            <input type="number" name="phone-number">
+                            <input type="number" required name="phone-number">
                         </div>
                     </fieldset>
                     <fieldset class="password">
                         <div>
                             <label for="password">PASSWORD</label><br>
-                            <input type="password" name="password">
+                            <input type="password" required name="password">
                         </div>
                         <div>
                             <label for="confirm-password">CONFIRM PASSWORD</label><br>
-                            <input type="password" name="confirm-password">
+                            <input type="password" required name="confirm-password">
                         </div>
                     </fieldset>
             </div>
             <div class="submit-form">
                 <label for="create-account"></label>
                 <input type="submit" name="create-account" value="Create Account">
+                <p>Already have an account? <a href>Log in</a></p>
             </div>
         </form>
         </div>
