Finalise CSS styling

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                         </div>
                         <div>
                             <label for="phone-number">PHONE NUMBER</label><br>
-                            <input type="number" required name="phone-number">
+                            <input type="tel" required name="phone-number">
                         </div>
                     </fieldset>
                     <fieldset class="password">
