Add logo CSS and HTML

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <div class="hero">
+        <div class="logo-title">
+            <img src="/img/logo.png"><span>ODIN</span>
+        </div>
     </div>
     <div class="content">
         <div class="description">
