Fix logo display, update README.md

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="hero">
         <div class="logo-title">
-            <img src="/img/logo.png" alt="logo"><span>ODIN</span>
+            <img src="img/logo.png" alt="logo"><span>ODIN</span>
         </div>
         <div class="bg-credit">Photo by <a href="https://unsplash.com/@mischievous_penguins?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Casey Horner</a>
              on <a href="https://unsplash.com/photos/RmoWqDCqN2E?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>
